# negotiation_agent

./: .gitignore  README.md  main.py  pyproject.toml
agents/: archetypes.py  base_agent.py  inventory_utils.py
config/: settings.py
market/: analytics.py  coordinator.py  marketplace.py
models/: data_models.py
negotiation/: negotiation_engine.py  negotiation_nodes.py
simulation_data/: agent_state.csv  data_analysis.ipynb  listings.csv  metrics.csv  negotiations.csv
utils/: __init__.py  csv_logger.py
